Fix z-index for nested overlays.

--- a/seantis/reservation/css/base.css
+++ b/seantis/reservation/css/base.css
@@ -210,6 +210,10 @@ body .event-unavailable .fc-event-time {
     display: none;
 }
 
+.overlay.overlay-ajax {
+    z-index: 9999 !important;
+}
+
 /* to overlap the overlay */
 .riform {
     z-index: 10000;
